name:                haskell-api-example
version:             0.1.0.0
synopsis:            An example on how to implement a simple REST API in Haskell.
-- description:
homepage:            https://github.com/Kitanotori/haskell-api-example#README
license:             Apache
license-file:        LICENSE
author:              Petri Kivikangas
maintainer:          petri.kivikangas@protonmail.com
copyright:           2019 Petri Kivikangas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable haskell-api-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-api-example
  default-language:    Haskell2010

test-suite haskell-api-example-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-api-example
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Kitanotori/haskell-api-example
